--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -54,6 +54,8 @@ sp-std = { default-features = false, version = '3.0.0' }
 sp-transaction-pool = { default-features = false, version = '3.0.0' }
 sp-version = { default-features = false, version = '3.0.0' }
 
+pallet-nicks = { default-features = false, version = '3.0.0' }
+
 [features]
 default = ['std']
 runtime-benchmarks = [
@@ -93,4 +95,5 @@ std = [
     'sp-std/std',
     'sp-transaction-pool/std',
     'sp-version/std',
+    'pallet-nicks/std',
 ]
