--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -53,6 +53,9 @@ sp-runtime = '3.0.0'
 sp-transaction-pool = '3.0.0'
 substrate-frame-rpc-system = '3.0.0'
 
+pallet-contracts  = '3.0.0'
+pallet-contracts-rpc  = '3.0.0'
+
 [features]
 default = []
 runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
