--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -56,6 +56,11 @@ sp-version = { default-features = false, version = '3.0.0' }
 
 pallet-nicks = { default-features = false, version = '3.0.0' }
 
+pallet-contracts = { default-features = false, version = '3.0.0' }
+pallet-contracts-primitives = { default-features = false, version = '3.0.0' }
+pallet-contracts-rpc-runtime-api = { default-features = false, version = '3.0.0' }
+
+
 [features]
 default = ['std']
 runtime-benchmarks = [
@@ -96,4 +101,7 @@ std = [
     'sp-transaction-pool/std',
     'sp-version/std',
     'pallet-nicks/std',
+    'pallet-contracts/std',
+    'pallet-contracts-primitives/std',
+    'pallet-contracts-rpc-runtime-api/std',
 ]
